# guillotina_fhirfield

./: .readthedocs.yml  .travis.yml  CHANGES.rst  HISTORY.rst  MANIFEST.in  Makefile  Pipfile  README.rst  docs-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  guillotina_fhirfield.rst  guillotina_fhirfield.tests.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
src/guillotina_fhirfield/: __init__.py  cli.py  fhirpath.py  field.py  helpers.py  interfaces.py  mapping_types.py  patch.py  query.py  variables.py
src/guillotina_fhirfield/tests/: conftest.py  fhir_contents.py  fixtures.py  helpers.py  test_field.py  test_guillotina_fhirfield.py  test_helpers.py
tests/: conftest.py  fixtures.py  test_field.py  test_guillotina_fhirfield.py
